# setXup

./: .gitignore  AGENTS.md  Hackathon II - Todo Spec-Driven Development.md  README.md  package-lock.json  package.json  uv-workspace-manager.skill
.github/workflows/: ci.yml
.specify/: feature.json
.specify/integrations/: opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
Doc/: BEGINNER-GUIDE.md  deployment_report.md  feature-requirements.md  implementation-plan.md  ui-design-plan.md
backend/: .env.example  .gitignore  auth.py  database.py  init_db.py  main.py  models.py  pyproject.toml  reset_db.py  schemas.py  test_db.sqlite  utils.py
backend/data/: templates.json
backend/routers/: comments.py  dashboard.py  lists.py  orgs.py  spaces.py  statuses.py  tags.py  tasks.py  templates.py  users.py
backend/services/: dashboard_service.py  task_service.py
backend/tests/: conftest.py  test_app.py  test_auth.py
error learning/: tailwind error.md
frontend/: .env.local.example  .gitignore  eslint.config.mjs  middleware.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AppContext.tsx  ThemeProvider.tsx
frontend/lib/: api-client.ts  auth.ts
phase1-console/: README.md  pyproject.toml
phase1-console/src/: __init__.py  cli.py  models.py  services.py
specs/001-task-crud/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-phase2-webapp/: data-model.md  plan.md  quickstart.md  research.md  (+2 more)
(+33 files in other folders)
